# websockets

./: .gitignore  README.md  docker-compose.yaml
mdanalytics/: Cargo.toml  Dockerfile
mdanalytics/src/: lib.rs  main.rs  tui.rs
mdanalytics/src/api/: mod.rs
mdanalytics/src/types/: mod.rs
mdanalytics/src/utils/: mod.rs
mdcore/: Cargo.toml
mdcore/src/: lib.rs
mdworkers/: Cargo.toml  Dockerfile
mdworkers/src/: lib.rs
mdworkers/src/config/: cfg.rs  mod.rs
mdworkers/src/services/: streams.rs
mdworkers/src/streams/: handlers.rs  mod.rs
mdworkers/src/types/: assetclass.rs  client.rs  message.rs
mdworkers/src/ws/: actors.rs  handlers.rs  mod.rs
mdws-fe/: .cta.json  Dockerfile  env.d.ts  index.html  nginx.conf  package-lock.json  package.json  tokengen.js  tsconfig.json  vite.config.ts
mdws-fe/src/: main.tsx  routeTree.gen.ts  styles.css
mdws-fe/src/components/Header/: NavBar.tsx  NavLink.tsx
mdws-fe/src/components/TickerCard/: TickerTable.tsx
mdws-fe/src/context/: MktSocketCtx.tsx  TickersCtx.tsx  index.ts
mdws-fe/src/hooks/: useMarketWs.ts
mdws-fe/src/routes/: __root.tsx  index.tsx  subscriptions.tsx
mdws-fe/src/services/: websocket.ts
mdws-fe/src/types/: event.ts  index.ts  misc.ts  subscriptions.ts  updates.ts
mdwstrading/: Cargo.toml  Dockerfile
mdwstrading/src/: lib.rs
mdwstrading/src/data/: feed.rs  indicators.rs  mod.rs  pricing.rs
mdwstrading/src/portfolio/: leveraged.rs  mod.rs
mdwstrading/src/strategy/: allocator.rs  mod.rs
ws-server/: Dockerfile  README.md  docker-compose.yaml  go.mod  go.sum  handler.go  main.go  server.go  start-redis-cluster.sh
ws-server/cmd/: main.go
ws-server/internal/core/: handlers.go  marketfeed.go  server.go  streams.go
ws-server/internal/models/: assetclass.go  subscriptions.go
ws-server/internal/store/cache/: store.go  subscriptions.go
ws-server/utils/: utils.go
