[package]
name = "mdanalytics"
version = "0.1.0"
edition = "2024"
[[bin]]
name = "tui"
path = "src/tui.rs"

[dependencies]
chrono = { version = "^0.4.41", features = [] }
influxdb = { version = "0.8.0", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
plotters = "0.3.7"
polars = { version = "0.53.0", features = [
  "describe",
  "lazy",
  "ndarray",
  "object",
  "dtype-struct",
  "concat_str",
  "mode",
  "temporal",
  "timezones",
  "strings",
  "dtype-datetime",
  "json",
] }
arc-swap = { version = "1.8.2" }
dotenvy = "0.15.7"
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.8.8", features = ["macros"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-error = "0.2.1"
tower-http = { version = "0.6.8", features = ["trace"] }
snowflake_me = { version = "0.5.0", features = ["ip-fallback"] }
futures-util = "0.3.32"
tokio-stream = { version = "0.1.18", features = ["full"] }
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
mdcore = { path = "../mdcore" }
color-eyre = "0.6.5"
