[package]
name = "mdworkers"
version = "0.1.0"
authors = ["Elton Mpinyuri <ebmpinyuri@gmail.com>"]
repository = "https://github.com/Mpinyaz/MDWS"
edition = "2024"
description = "Rabbit MQ consumer that streams market data from web sockets"
readme = "./README.md"
keywords = ["rabbitmq", "websockets"]

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
futures-util = "0.3.31"
async-trait = "0.1.89"
rabbitmq-stream-client = "*"
tracing = "*"
tracing-subscriber = "*"
dotenv = "0.15.0"
anyhow = "1.0.100"
dotenvy = "0.15.7"
influxdb = { version = "0.8", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
