[package]
name = "mdwstrading"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "^0.4.41", features = ["serde"] }
rust_decimal = "1.40.0"
serde = "1.0.228"
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
mdcore = { path = "../mdcore" }
tokio = { version = "1.50.0", features = ["sync"] }
rust_decimal_macros = "1.40.0"
polars = { version = "0.53.0", features = [
  "describe",
  "lazy",
  "ndarray",
  "object",
  "dtype-struct",
  "concat_str",
  "mode",
  "temporal",
  "timezones",
  "strings",
  "dtype-datetime",
  "json",
] }
ta = "0.5.0"
